/***********************************************************************
X3 ChangeLog

2010-08-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Changed wheel of misfortune nick change pseudo
	user to use a hard coded host name to prevent accidentally giving
	out a users real host.

2010-08-19  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Changed TOK_PRIVS to "PR" to match current ircu
	distributions.

2010-07-31  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-common.c: Added hg revision information to VERSION
	reply to match version strings everywhere else.

2010-07-30  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/Makefile.in: Added version.c generation at compile time

	* src/modcmd.c: Updated to use cvs_version from version.c

	* src/version.c.SH: Added version.c.SH to generate version.c

	* src/version.h: Added version.h

2010-07-07  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/hash.h: Added support for user modes +D, +R, +W, +H, +L
	and +q.

	* src/opserv.c: Added support for user modes +D, +R, +W, +H, +L
	and +q.

	* src/proto-p10.c: Added support for user modes +D, +R, +W, +H,
	+L and +q.

2010-07-07  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/hash.h: Added support for user modes +z and +a and fixed
	some comments.

	* src/opserv.c: Added support for user modes +z and +a and
	added support to TRACE/ADDALERT CHECKRESTRICTIONS criteria for
	channel mode +a and +Z.

	* src/proto-p10.c: Added support for user modes +z and +a.

2010-07-07  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.c: Added support to TRACE/ADDALERT CHECKRESTRICTIONS
	criteria for channel mode +O and +r.

2010-07-03  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Removed extra 'is' from CSMSG_SMURF_TARGET.

2010-06-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for crash on BURST (B) message for a channel
	with +L, at least one ban or except, and no users.

2010-05-21  Matthew Beeching  <jobe@mdbnet.co.uk>
